...
          Padding(
            padding: const EdgeInsets.all(AppSpacing.xxl),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text(
                  'UKUPNO NESREĆA',
                  style: theme.textTheme.labelSmall,
                ),
                const SizedBox(height: AppSpacing.sm),
                Text(
                  NumberFormat('#,###').format(total),
                  style: theme.textTheme.displayLarge,
...
